# GMD_Tracker

./: .gitignore  CMakeLists.txt  README.md  install.sh
cmake/Modules/: FindCaffe.cmake
nets/: mdnet_finetune.prototxt  mdnet_roipool_finetune.prototxt  mdnet_roipool_nopool_finetune.prototxt  mdnet_roipool_nopool_train.prototxt  mdnet_roipool_train.prototxt  mdnet_train.prototxt  solver.prototxt  tracker_new_finetune.prototxt  tracker_new_finetune_rois.prototxt  tracker_new_test.prototxt  tracker_new_train.prototxt  tracker_new_train.prototxt.orig  tracker_twostream_rois_fast_finetune.prototxt  tracker_twostream_rois_fast_train.prototxt
nets/solver_temp/: solver_temp_GOTURN_MDNET_TWO_STREAM_ROIS_BATCH_SINGLE_NO_POOL_AVG.prototxt  solver_temp_GOTURN_MDNET_TWO_STREAM_ROIS_BATCH_SINGLE_NO_POOL_AVG_FINETUNE.prototxt  solver_temp_mdnet_finetune.prototxt  solver_temp_mdnet_roipool_finetune.prototxt  solver_temp_mdnet_roipool_nopool_finetune.prototxt  solver_temp_mdnet_roipool_nopool_train.prototxt  solver_temp_mdnet_roipool_train.prototxt  solver_temp_mdnet_train.prototxt
scripts/: download_model_init.sh  download_trained_model.sh  finetune_generate_solver.sh  generate_k_domain_layer.py  k_domain_layers.txt  parse_log_visualise_loss.py  save_videos_test.sh  show_mdnet.sh  show_mdnet_roipool.sh  show_mdnet_roipool_nopool.sh  show_tracker_single_domain_two_stream_roi_batch.sh  show_tracker_test.sh  show_tracker_test_gmd.sh  show_tracker_test_gmd_finetune.sh  train_generate_solver.sh  train_mdnet.sh  train_mdnet_roipool.sh  train_mdnet_roipool_nopool.sh  train_multi_domain.sh  train_multi_domain_two_stream_rois_batch.sh  train_multi_domain_two_stream_rois_fast.sh  train_single_domain_two_stream_rois_batch.sh  train_single_domain_two_stream_rois_batch_OTB.sh  visualise_loss.py  visualise_loss_multi_domain.py
src/UnitTest/: unit_test.cpp
src/helper/: Common.h  CommonCV.h  Constants.h  bounding_box.cpp  bounding_box.h  bounding_box_regressor.cpp  bounding_box_regressor.h  helper.cpp  helper.h  image_proc.cpp
src/loader/: loader_alov.cpp  loader_imagenet_video.cpp  loader_imagenet_video.h  loader_otb.cpp  loader_otb.h  loader_vot.cpp  track_object.h  video_imagenet.cpp  video_imagenet.h
src/network/: regressor.cpp  regressor.h  regressor_base.h  regressor_train.cpp  regressor_train.h  regressor_train_base.cpp  regressor_train_base.h
src/test/: test_tracker_vot.cpp  test_tracker_vot_gmd_finetune.cpp  test_tracker_vot_gmd_finetune_trax.cpp
src/tracker/: tracker.cpp  tracker.h  tracker_gmd.cpp  tracker_gmd.h  tracker_manager.cpp  tracker_manager.h
src/train/: example_generator.cpp  example_generator.h  tracker_trainer.h  tracker_trainer_multi_domain.cpp  tracker_trainer_multi_domain.h  train_multi_domain.cpp  train_multi_domain_imagenet.cpp
src/visualizer/: show_tracker_otb.cpp  show_tracker_vot_gmd.cpp  show_tracker_vot_gmd_finetune.cpp
